--- a/EPUBKit/EPUBKitView/Views/EKViewCell.xib
+++ b/EPUBKit/EPUBKitView/Views/EKViewCell.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EK"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="EKViewCell" customModule="EPUBKit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="348" height="538"/>
@@ -19,22 +19,31 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n50-dI-vez">
-                        <rect key="frame" x="32" y="32" width="284" height="474"/>
+                        <rect key="frame" x="32" y="64" width="284" height="426"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoV-zV-TLn">
+                        <rect key="frame" x="161.5" y="33.5" width="25" height="14.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstItem="n50-dI-vez" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="32" id="BRM-W2-UgV"/>
                 <constraint firstAttribute="trailing" secondItem="n50-dI-vez" secondAttribute="trailing" constant="32" id="KZR-Te-eWx"/>
-                <constraint firstAttribute="bottom" secondItem="n50-dI-vez" secondAttribute="bottom" constant="32" id="c6s-Ip-4HX"/>
-                <constraint firstItem="n50-dI-vez" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="32" id="nqY-wa-XTm"/>
+                <constraint firstAttribute="bottom" secondItem="n50-dI-vez" secondAttribute="bottom" constant="48" id="c6s-Ip-4HX"/>
+                <constraint firstItem="qoV-zV-TLn" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="jt5-uq-oIY"/>
+                <constraint firstItem="n50-dI-vez" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="64" id="nqY-wa-XTm"/>
+                <constraint firstItem="n50-dI-vez" firstAttribute="top" secondItem="qoV-zV-TLn" secondAttribute="bottom" constant="16" id="udx-Xm-hUt"/>
             </constraints>
             <size key="customSize" width="348" height="538"/>
             <connections>
                 <outlet property="pageView" destination="n50-dI-vez" id="qHi-DA-zJj"/>
+                <outlet property="titleLabel" destination="qoV-zV-TLn" id="cdo-Ul-u0u"/>
             </connections>
-            <point key="canvasLocation" x="59" y="90"/>
+            <point key="canvasLocation" x="28" y="81"/>
         </collectionViewCell>
     </objects>
 </document>
