--- a/EPUBKit/EPUBKitView/Views/EKPageViewCell.xib
+++ b/EPUBKit/EPUBKitView/Views/EKPageViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="EKViewCell" customModule="EPUBKit" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="EKPageViewCell" customModule="EPUBKit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="348" height="538"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -28,18 +28,27 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7S-my-GgH">
+                        <rect key="frame" x="159.5" y="506" width="29" height="15"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstItem="n50-dI-vez" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="32" id="BRM-W2-UgV"/>
+                <constraint firstItem="g7S-my-GgH" firstAttribute="top" secondItem="n50-dI-vez" secondAttribute="bottom" constant="16" id="HyN-4U-mwf"/>
                 <constraint firstAttribute="trailing" secondItem="n50-dI-vez" secondAttribute="trailing" constant="32" id="KZR-Te-eWx"/>
                 <constraint firstAttribute="bottom" secondItem="n50-dI-vez" secondAttribute="bottom" constant="48" id="c6s-Ip-4HX"/>
                 <constraint firstItem="qoV-zV-TLn" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="jt5-uq-oIY"/>
                 <constraint firstItem="n50-dI-vez" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="64" id="nqY-wa-XTm"/>
+                <constraint firstItem="g7S-my-GgH" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="qj8-qu-8xI"/>
                 <constraint firstItem="n50-dI-vez" firstAttribute="top" secondItem="qoV-zV-TLn" secondAttribute="bottom" constant="16" id="udx-Xm-hUt"/>
             </constraints>
             <size key="customSize" width="348" height="538"/>
             <connections>
+                <outlet property="pageLabel" destination="g7S-my-GgH" id="Cxv-6S-LoV"/>
                 <outlet property="pageView" destination="n50-dI-vez" id="qHi-DA-zJj"/>
                 <outlet property="titleLabel" destination="qoV-zV-TLn" id="cdo-Ul-u0u"/>
             </connections>
